code linter fixes